# my-text-to-sql

./: .gitignore  LICENSE  README.md  agent.py  discovery.md  docker-compose.yml  init_postgres.py  prepare_qdrant_data.py  pyproject.toml
